--- a/azure-pipelines/templates/stages/release.yml
+++ b/azure-pipelines/templates/stages/release.yml
@@ -32,7 +32,7 @@ stages:
               patterns: package-*/*
               displayName: Download artifacts
 
-            - pwsh: get-childitem "$(Pipeline.Workspace)/package-*-*/*" | foreach { rename-item $_ $_.Name.Replace("fiskaltrust.Launcher-", "") }
+            - pwsh: get-childitem "$(Pipeline.Workspace)/package-*/*" | foreach { rename-item $_ $_.Name.Replace("fiskaltrust.Launcher-", "") }
               displayName: Rename artifacts
 
             - ${{ each target in parameters.targets }}:
