--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -6,10 +6,10 @@ parameters:
   type: object
 
 stages:
-- stage: Deploy
+- stage: Build
 
   jobs:
-  - job: Deploy
+  - job: Build
 
     strategy:
       matrix:
