split up pipelines

--- a/azure-pipelines/templates/stages/release.yml
+++ b/azure-pipelines/templates/stages/release.yml
@@ -2,6 +2,10 @@ parameters:
 - name: stages
   type: stageList
 
+- name: artifact
+  type: string
+  default: current
+
 - name: targets
   type: object
   default:
@@ -15,13 +19,20 @@ stages:
   - ${{ each pair in stage }}:
       ${{ pair.key }}: ${{ pair.value }}
     
+    displayName: Release ${{ stage.templateContext.environment }}
+
+    ${{ if eq(stage.templateContext.environment, 'production') }}:
+      condition: startsWith(variables.branch, 'refs/tags/v')
+    ${{ else }}:
+      condition: or(startsWith(variables['Build.Reason'], 'Manual'), startsWith(variables.branch, 'refs/tags/v')))
+
     jobs:
     - deployment: Release
 
       pool:
         vmImage: windows-latest
 
-      environment: ${{ stage.templateContext.environment }}
+      environment: ${{ stage.templateContext.serviceConnection }}
 
       strategy:
         runOnce:
@@ -40,7 +51,7 @@ stages:
               - task: AzureCLI@2
                 displayName: "[${{ target }}] Publish to blob storage"
                 inputs:
-                  azureSubscription: ${{ stage.templateContext.environment }}
+                  azureSubscription: ${{ stage.templateContext.serviceConnection }}
                   scriptType: ps
                   scriptLocation: inlineScript
                   inlineScript: |
