--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="SemanticVersioning" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
