--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Ideas, questions and help requests
-    url:  https://github.com/fiskaltrust/middleware-launcher/discussions
+    url:  /discussions
     about: Please ask questions and discuss ideas in our discussion section
