--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -14,8 +14,10 @@ stages:
 
     steps:
     - template: ../restore.yml
+      parameters:
+        config: ${{ parameters.config }}
 
-    - pwsh: dotnet build -c ${{ parameters.config }} --self-contained false
+    - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
     - pwsh: dotnet test -c ${{ parameters.config }}
