--- a/azure-pipelines/templates/restore.yml
+++ b/azure-pipelines/templates/restore.yml
@@ -1,8 +1,3 @@
-parameters:
-- name: config
-  type: string
-  default: debug
-
 steps:
 - task: yavt@1
   inputs:
@@ -15,5 +10,5 @@ steps:
 
 - task: NuGetAuthenticate@0
 
-- pwsh: dotnet restore -c ${{ parameters.config }}
+- pwsh: dotnet restore
   displayName: Restore
