--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -15,3 +15,6 @@ stages:
   
     - pwsh: dotnet test
       displayName: Test
+
+    - pwsh: ls -Depth 2 test\fiskaltrust.Launcher.IntegrationTest\bin\Debug\net6.0 | select fullname
+      condition: always()
