--- a/azure-pipelines/fiskaltrust.Launcher.yml
+++ b/azure-pipelines/fiskaltrust.Launcher.yml
@@ -10,6 +10,11 @@ variables:
 
 stages:
   - template: templates/stages/test.yml
+    parameters:
+      ${{ if startsWith(variables.branch, 'refs/tags/v')}}:
+        config: release
+      ${{ else }}:
+        config: debug
 
   - template: templates/stages/build.yml
     parameters:
