--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -1,3 +1,8 @@
+parameters:
+- name: config
+  type: string
+  default: debug
+
 stages:
 - stage: Test
 
@@ -10,8 +15,8 @@ stages:
     steps:
     - template: ../restore.yml
 
-    - pwsh: dotnet build
+    - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
-    - pwsh: dotnet test
+    - pwsh: dotnet test -c ${{ parameters.config }}
       displayName: Test
