--- a/src/fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj
+++ b/src/fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="SemanticVersioning" Version="2.0.2" />
+    <PackageReference Include="fiskaltrust.storage.encryption" Version="1.3.1" />
   </ItemGroup>
 
 </Project>
