--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -18,5 +18,11 @@ stages:
     - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
-    - pwsh: dotnet test -c ${{ parameters.config }}
+    - pwsh: dotnet test -c ${{ parameters.config }} --logger trx
       displayName: Test
+
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
