--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -17,8 +17,15 @@ stages:
     - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
-    - pwsh: dotnet test -c ${{ parameters.config }}
+    - pwsh: dotnet test -c ${{ parameters.config }} --logger trx
       displayName: Test
+
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+        testRunTitle: Windows Tests
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
 
   - job: TestLinux
     pool:
@@ -30,8 +37,15 @@ stages:
     - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
-    - pwsh: dotnet test -c ${{ parameters.config }}
+    - pwsh: dotnet test -c ${{ parameters.config }} --logger trx
       displayName: Test
+
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+        testRunTitle: Linux Tests
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
 
   - job: TestMacOS
     pool:
@@ -49,5 +63,6 @@ stages:
     - task: PublishTestResults@2
       condition: succeededOrFailed()
       inputs:
+        testRunTitle: MacOS Tests
         testRunner: VSTest
         testResultsFiles: '**/*.trx'
