--- a/src/fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj
+++ b/src/fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="SemanticVersioning" Version="2.0.2" />
     <PackageReference Include="fiskaltrust.storage.encryption" Version="1.3.1" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
 </Project>
