--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -17,7 +17,7 @@ stages:
     - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
-    - pwsh: dotnet test -c ${{ parameters.config }} --logger "consoletrxconsole;verbosity=detailed"
+    - pwsh: dotnet test -c ${{ parameters.config }} --logger "console;verbosity=detailed"
       displayName: Test
 
     - task: PublishTestResults@2
