--- a/test/fiskaltrust.Launcher.IntegrationTest/fiskaltrust.Launcher.IntegrationTest.csproj
+++ b/test/fiskaltrust.Launcher.IntegrationTest/fiskaltrust.Launcher.IntegrationTest.csproj
@@ -30,7 +30,7 @@
 
   <Target Name="CopyLauncherUpdater" AfterTargets="Build">
     <ItemGroup>
-      <LauncherUpdater Include="..\..\src\fiskaltrust.LauncherUpdater\bin\$(Configuration)\$(TargetFramework)\*\*"/>
+      <LauncherUpdater Include="..\..\src\fiskaltrust.LauncherUpdater\bin\$(Configuration)\$(TargetFramework)\*"/>
     </ItemGroup>
     <Copy SourceFiles="@(LauncherUpdater)" DestinationFiles="$(OutputPath)/fiskaltrust.LauncherUpdater/%(Filename)%(Extension)" ContinueOnError="false" />
   </Target>
