--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -6,6 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+    <DefineConstants></DefineConstants>
+    <DefineConstants></DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(SelfUpdate)'=='true' or '$(SelfUpdate)'==''">
+      <DefineConstants>$(DefineConstants);EnableSelfUpdate</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
