--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -17,19 +17,19 @@
   <ItemGroup>
     <PackageReference Include="CoreWCF.Http" Version="1.3.1" />
     <PackageReference Include="CoreWCF.NetTcp" Version="1.3.1" />
-    <PackageReference Include="fiskaltrust.interface" Version="1.3.40" />
+    <PackageReference Include="fiskaltrust.interface" Version="1.3.40-ci-23089-61756" />
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.42-ci-22319-57723" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.42-ci-23089-61762" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="2.0.0-alpha1-22020-50210" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.42-ci-22319-57723" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.43-ci-22347-58405" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.42-ci-23089-61762" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.42-ci-23089-61762" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact.Reader" Version="2.0.0" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.179" />
     <PackageReference Include="System.CommandLine.Hosting" Version="0.3.0-alpha.21216.1" />
     <PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
-	<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="SemanticVersioning" Version="2.0.2" />
     <PackageReference Include="DiffPlex" Version="1.7.1" />
