--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -17,12 +17,12 @@
   <ItemGroup>
     <PackageReference Include="CoreWCF.Http" Version="1.3.1" />
     <PackageReference Include="CoreWCF.NetTcp" Version="1.3.1" />
-    <PackageReference Include="fiskaltrust.interface" Version="1.3.40-ci-23089-61756" />
+    <PackageReference Include="fiskaltrust.interface" Version="1.3.45-rc2" />
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.42-ci-23089-61762" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.45-rc2" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="2.0.0-alpha1-22020-50210" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.42-ci-23089-61762" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.42-ci-23089-61762" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.45-rc2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.45-rc2" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact.Reader" Version="2.0.0" />
