--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -49,7 +49,7 @@ stages:
 
   - job: TestMacOS
     pool:
-      vmImage: macos-latest
+      vmImage: macos-11
 
     steps:
     - template: ../restore.yml
