Add installation scripts to release artifacts

--- a/azure-pipelines/templates/stages/release.yml
+++ b/azure-pipelines/templates/stages/release.yml
@@ -1,58 +1,77 @@
 parameters:
-- name: stages
-  type: stageList
+  - name: stages
+    type: stageList
 
-- name: artifact
-  type: string
-  default: current
+  - name: artifact
+    type: string
+    default: current
 
-- name: targets
-  type: object
-  default:
-  - win-x64
-  - win-x86
-  - linux-x64
-  - linux-arm
-  - linux-arm64
-  - osx-x64
+  - name: targets
+    type: object
+    default:
+      - win-x64
+      - win-x86
+      - linux-x64
+      - linux-arm
+      - linux-arm64
+      - osx-x64
 
 stages:
-- ${{ each stage in parameters.stages }}:
-  - ${{ each pair in stage }}:
-      ${{ pair.key }}: ${{ pair.value }}
-    
-    displayName: Release ${{ stage.templateContext.environment }}
+  - ${{ each stage in parameters.stages }}:
+      - ${{ each pair in stage }}:
+          ${{ pair.key }}: ${{ pair.value }}
+        
+        displayName: Release ${{ stage.templateContext.environment }}
+        
+        ${{ if eq(stage.templateContext.environment, 'production') }}:
+          condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
+        
+        jobs:
+          - deployment: Release
+            
+            pool:
+              vmImage: windows-latest
+            
+            environment: ${{ stage.templateContext.serviceConnection }}
+            
+            strategy:
+              runOnce:
+                deploy:
+                  steps:
 
-    ${{ if eq(stage.templateContext.environment, 'production') }}:
-      condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
+                    - ${{ each target in parameters.targets }}:
+                        - download: ${{ parameters.artifact }}
+                          artifact: package-${{ target }}
+                          displayName: "[${{ target }}] Download artifact"
 
-    jobs:
-    - deployment: Release
+                    - pwsh: get-childitem "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-*/*" | foreach { rename-item $_ $_.Name.Replace("fiskaltrust.Launcher-", "") }
+                      displayName: Rename artifacts
 
-      pool:
-        vmImage: windows-latest
+                    - ${{ each target in parameters.targets }}:
+                        - task: AzureCLI@2
+                          displayName: "[${{ target }}] Publish to blob storage"
+                          inputs:
+                            azureSubscription: ${{ stage.templateContext.serviceConnection }}
+                            scriptType: ps
+                            scriptLocation: inlineScript
+                            inlineScript: |
+                              az storage blob upload-batch --account-name ${{ stage.templateContext.storage }} -d "packages" --destination-path "${{ target }}/fiskaltrust.Launcher/" -s "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-${{ target }}/" --pattern "*.zip*"
 
-      environment: ${{ stage.templateContext.serviceConnection }}
+                    - ${{ each target in parameters.targets }}:
+                        - task: CopyFiles@2
+                          displayName: "[${{ target }}] Include scripts in the package"
+                          inputs:
+                            SourceFolder: "scripts"
+                            Contents: "**"
+                            TargetFolder: "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-${{ target }}"
+                            Overwrite: true
 
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-
-            - ${{ each target in parameters.targets }}:
-              - download: ${{ parameters.artifact }}
-                artifact: package-${{ target }}
-                displayName: "[${{ target }}] Download artifact"
-
-            - pwsh: get-childitem "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-*/*" | foreach { rename-item $_ $_.Name.Replace("fiskaltrust.Launcher-", "") }
-              displayName: Rename artifacts
-
-            - ${{ each target in parameters.targets }}:
-              - task: AzureCLI@2
-                displayName: "[${{ target }}] Publish to blob storage"
-                inputs:
-                  azureSubscription: ${{ stage.templateContext.serviceConnection }}
-                  scriptType: ps
-                  scriptLocation: inlineScript
-                  inlineScript: |
-                    az storage blob upload-batch --account-name ${{ stage.templateContext.storage }} -d "packages" --destination-path "${{ target }}/fiskaltrust.Launcher/" -s "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-${{ target }}/" --pattern "*.zip*"
+                    - ${{ each target in parameters.targets }}:
+                        - task: ArchiveFiles@2
+                          displayName: "[${{ target }}] Update package with scripts"
+                          inputs:
+                            rootFolderOrFile: "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-${{ target }}"
+                            includeRootFolder: false
+                            archiveType: "zip"
+                            archiveFile: "$(Pipeline.Workspace)/${{ parameters.artifact }}/package-${{ target }}/fiskaltrust.Launcher-${{ target }}-${{ variables.version }}.zip"
+                            replaceExistingArchive: true
