--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -47,7 +47,8 @@ stages:
       - pwsh: |
           mv ./Directory.build.props ./Directory.Build.props
           dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true -p:PublishReadyToRun=true
-        displayName: Publish
+        displayName: "[${{ project }}] Publish"
+
 
     - task: codesigning@2
       displayName: 'Code Signing'
@@ -56,8 +57,9 @@ stages:
         signCertPassword: '$(Code_Signing_Password)'
         filePaths: |
           ./src/**/fiskaltrust.Launcher.dll
-          ./src/**/fiskaltrust.Launcher.exe
+          ./src/**/*fiskaltrust*.exe
           ./src/**/fiskaltrust.Launcher
+          ./src/**/fiskaltrust.LauncherUpdater
           
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
       artifact: drop-$(target)
@@ -70,7 +72,7 @@ stages:
     - ${{ each project in parameters.projects }}:
       - pwsh: |
           Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
-        displayName: Copy executables
+        displayName: "[${{ project }}] Copy executables"
         
 
     - pwsh: |
