--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -56,6 +56,7 @@ stages:
         secureFileId: 'codesigning.pfx'
         signCertPassword: '$(Code_Signing_Password)'
         filePaths: |
+          ./drop-*/**/*fiskaltrust*
           ./src/**/fiskaltrust.Launcher.dll
           ./src/**/*fiskaltrust*.exe
           ./src/**/fiskaltrust.Launcher
